Parsing Winx sourcecode into an interpretable JSON format